Bug 189007 Switch group without clearing QuickSearch resets view r=bienvenu sr=Henry.Jia